# zawgl

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
client/zawgl-client/: Cargo.toml  README.md
client/zawgl-client/src/: lib.rs  parameters.rs
cpp/db/cypher-engine/: CMakeLists.txt
cpp/db/cypher-engine/src/: CypherBaseListener.cpp  CypherEngine.h  CypherEngineImpl.h  CypherLexer.cpp  CypherParser.h
cpp/db/cypher-model/: CMakeLists.txt
cpp/db/cypher-model/src/: CypherModel.h
cpp/db/graph-store/: CMakeLists.txt
cpp/db/graph-store/src/: DynamicStore.h  GraphStore.cpp  GraphStore.h  NodeStore.cpp  PropertyStore.cpp  PropertyStore.h  RelationshipStore.cpp  RelationshipStore.h  StaticStore.h
cpp/db/model/: CMakeLists.txt
cpp/db/model/src/: Definitions.h
cpp/db/tests-cypher/: CMakeLists.txt
db/: CMakeLists.txt
db/antlr-runtime/: CMakeLists.txt
db/antlr-runtime/runtime/src/: dllmain.cpp
db/cypher-engine/: CMakeLists.txt
db/cypher-engine/src/: CypherBaseListener.h  CypherEngine.cpp  CypherEngine.h  CypherEngineImpl.cpp  CypherEngineImpl.h  CypherLexer.h  CypherListener.cpp  CypherListener.h  CypherParser.cpp
db/cypher-model/: CMakeLists.txt
db/cypher-model/src/: CypherCreateModel.h
db/graph-repository/: CMakeLists.txt
db/graph-repository/src/: GraphRepository.cpp  IntegerRepository.h  NodeRepository.h  PropertyRepository.cpp  RelationshipRepository.cpp
db/graph-store/src/: DynamicStore.cpp  DynamicStore.h  NodeStore.h  PropertyStore.h  RecordManager.h
db/model/src/: Config.h  Definitions.h  Graph.h
db/tests-common/: CMakeLists.txt
db/tests-common/src/: TestCommon.h
db/tests-cypher/: CMakeLists.txt
db/tests-cypher/src/: TestCypher.cpp
db/tests-repository/: CMakeLists.txt
db/tests-repository/src/: TestRepositories.cpp
db/tests-store/: CMakeLists.txt
db/tests-store/src/: TestPropertyStore.cpp  Tests.cpp
integration/cypher-tests/: Cargo.toml
integration/cypher-tests/src/: lib.rs
integration/cypher-tests/tests/: aggregation_tests.rs  benchmark_tests.rs  fix_tests.rs  open_cypher_errors.rs  open_cypher_properties_tests.rs  open_cypher_tests.rs  simple_tests.rs  with_collect_tests.rs
integration/cypher-tests/zawgl-db/: labels.db  nodes-index.db  nodes.db  properties.db  relationships.db
lib/one-graph-cypher/: Cargo.toml
lib/one-graph-cypher/src/: lib.rs
lib/one-graph-cypher/src/cypher/boolean_optimizer/: mod.rs
lib/one-graph-cypher/src/cypher/parser/: cypher_parser.rs  (+2 more)
lib/one-graph-cypher/src/model/: mod.rs
lib/one-graph-cypher/src/store/: mod.rs
lib/one-graph-cypher/tests/: integration_tests.rs
lib/one-graph-db-engine/: Cargo.toml
lib/one-graph-db-engine/src/: lib.rs
lib/one-graph-db-engine/src/db_engine/: add_edge_state.rs  add_vertex_state.rs  alias_vertex_state.rs  from_state.rs  from_step.rs  gremlin_state.rs  match_out_edge_state.rs  match_state.rs  match_vertex_state.rs  mod.rs  set_property_state.rs  utils.rs
lib/one-graph-gremlin/: Cargo.toml
lib/one-graph-gremlin/src/: gremlin.rs  gremlin_handler.rs  json_gremlin_handler.rs  json_gremlin_parser.rs  json_gremlin_request_builder.rs  json_gremlin_response_builder.rs  lib.rs
lib/one-graph-gremlin/src/gremlin_engine/: mod.rs  utils.rs
lib/one-graph-gremlin/src/handler/: mod.rs  utils.rs
lib/one-graph-server/: Cargo.toml
lib/one-graph-server/src/: json_gremlin_request_handler.rs  lib.rs  open_cypher_request_handler.rs  result.rs
lib/one-graph-server/tests/: gremlin_test.rs  one_cypher_tests.rs  open_cypher_tests.rs
lib/one-graph-tx-handler/: Cargo.toml
lib/one-graph-tx-handler/src/: lib.rs  request_handler.rs  tx_context.rs  tx_handler.rs
lib/orange-db-kernel/: Cargo.toml
lib/orange-db-kernel/src/: lib.rs
lib/orange-db-kernel/src/graph/: container.rs  mod.rs  traits.rs
lib/orange-db-kernel/src/graph_engine/: mod.rs  model.rs
lib/orange-db-kernel/src/kernel/: mod.rs
lib/orange-db-kernel/src/model/: mod.rs
lib/orange-db-kernel/src/query_engine/: mod.rs
lib/orange-db-kernel/src/repository/: graph_repository.rs
lib/orange-db-kernel/tests/: integration_tests.rs
lib/orange_db_kernel/: Cargo.toml
lib/orange_db_kernel/src/: lib.rs
lib/orange_db_kernel/src/conf/: mod.rs
lib/orange_db_kernel/src/repository/: graph_repository.rs
lib/zawgl-core/: Cargo.toml  README.md  build.rs
lib/zawgl-core/src/: buf_config.rs  config.rs  lib.rs  test_utils.rs
lib/zawgl-core/src/graph/: container.rs  mod.rs  traits.rs
lib/zawgl-core/src/graph_engine/: mod.rs  model.rs
lib/zawgl-core/src/matcher/: mod.rs
lib/zawgl-core/src/model/: init.rs  mod.rs  predicates.rs
lib/zawgl-core/src/repository/: graph_repository.rs  key_values_repository.rs  mod.rs  properties_repository.rs
lib/zawgl-cypher/: Cargo.toml
lib/zawgl-cypher-query-model/: Cargo.toml
lib/zawgl-cypher-query-model/src/: lib.rs  parameters.rs  properties.rs
lib/zawgl-cypher-query-model/src/ast/: mod.rs
lib/zawgl-cypher-query-model/src/model/: mod.rs
lib/zawgl-cypher-query-model/src/token/: mod.rs
lib/zawgl-cypher-query-planner/: Cargo.toml
lib/zawgl-cypher-query-planner/src/: lib.rs
lib/zawgl-cypher/src/: lib.rs  parameters.rs
lib/zawgl-cypher/src/cypher/: mod.rs
lib/zawgl-cypher/src/model/: mod.rs
lib/zawgl-cypher/tests/: integration_tests.rs
lib/zawgl-front/: Cargo.toml
lib/zawgl-front/src/: lib.rs
lib/zawgl-front/src/cypher/: mod.rs
lib/zawgl-front/src/planner/: mod.rs  pattern_builder.rs
lib/zawgl-front/src/tx_handler/: handler.rs  mod.rs  request_handler.rs  tx_context.rs
lib/zawgl-front/tests/: integration_tests.rs
lib/zawgl-server/: Cargo.toml
lib/zawgl-server/src/: json_gremlin_request_handler.rs  lib.rs  open_cypher_request_handler.rs  result.rs  settings.rs
lib/zawgl-server/tests/: gremlin_test.rs
lib/zawgl-tx-handler/: Cargo.toml
lib/zawgl-tx-handler/src/: lib.rs  request_handler.rs  tx_context.rs  tx_handler.rs
og/: Cargo.toml
og/src/: main.rs  settings.rs
one-graph-client/: Cargo.toml
one-graph-client/src/: lib.rs
zawgl/: .gitignore  Cargo.toml
zawgl/src/: main.rs  settings.rs
(+633 files in other folders)
