[package]
name = "og"
version = "0.1.0"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2018"

[dependencies]
one-graph-core = { path = "../lib/one-graph-core" }
one-graph-server = { path = "../lib/one-graph-server" }
tokio-tungstenite = "*"
tokio = { version = "1.13.0", features = ["full"] }
tungstenite = "*"
futures-util = "0.3.8"
log = "0.4"
config = "0.12.0"
serde = {version = "1.0", features = ["derive"] }
simple_logger = "2.1.0"