[package]
name = "one-graph-client"
version = "0.1.0"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2018"

[lib]
name = "one_graph_client"

[dependencies]
tokio-tungstenite = "0.15.0"
tokio = { version = "1.13.0", features = ["full"] }
futures-util = "^0.3"
log = "0.4"
simple_logger = "1.11.0"
serde_json = "1.0"
parking_lot = "0.11.2"
bson = "2.0.1"
url = "2.2.2"
futures-channel = "0.3.21"