[package]
name = "zawgl"
version = "0.1.9"
authors = ["Alexandre RICCIARDI <aricciardi501@gmail.com>"]
edition = "2021"

[dependencies]
zawgl-core = { path = "../lib/zawgl-core" }
zawgl-server = { path = "../lib/zawgl-server" }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
tungstenite = "0.26.1"
futures-util = "0.3.28"
log = { workspace = true }
config = "0.15.6"
serde = { workspace = true }
simple_logger = { workspace = true }
toml = { workspace = true }
clap = { version = "4.5.28", features = ["derive"] }
