[package]
name = "zawgl-client"
version = "0.1.4"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2021"
description = "Zawgl Graph Database Client"
license = "MIT"
[lib]
name = "zawgl_client"

[dependencies]
tokio-tungstenite = "0.19.0"
tokio = { version = "1.28.1", features = ["full"] }
futures-util = "^0.3"
log = "0.4"
simple_logger = "4.1.0"
serde_json = "1.0"
parking_lot = "0.12.1"
bson = "2.0.1"
url = "2.2.2"
futures-channel = "0.3.21"
uuid = { version = "1.1.2", features = ["v4"] }