[package]
name = "zawgl-client"
version = "0.1.5"
authors = ["Alexandre RICCIARDI <aricciardi501@gmail.com>"]
edition = "2021"
description = "Zawgl Graph Database Client"
license = "MIT"
[lib]
name = "zawgl_client"

[dependencies]
tokio-tungstenite = "0.24.0"
tokio = { version = "1.28.1", features = ["full"] }
futures-util = "^0.3"
log = "0.4"
simple_logger = "5.0.0"
parking_lot = "0.12.1"
serde_json = "1.0.128"
url = "2.2.2"
futures-channel = "0.3.21"
uuid = { version = "1.1.2", features = ["v4"] }