[package]
name = "zawgl-client"
version = "0.1.15"
authors = ["Alexandre RICCIARDI <aricciardi501@gmail.com>"]
edition = "2021"
description = "Zawgl Graph Database Client"
license = "MIT"
[lib]
name = "zawgl_client"

[dependencies]
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
futures-util = "^0.3"
simple_logger = { workspace = true }
log = { workspace = true }
parking_lot = "0.12.3"
serde_json = { workspace = true }
url = "2.2.2"
futures-channel = "0.3.31"
uuid = { version = "1.12.1", features = ["v4"] }
futures = { version= "0.3.31", features = ["thread-pool"] }