[package]
name = "cypher-tests"
version = "0.1.0"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2018"

[lib]
name = "cypher_tests"

[dependencies]
zawgl-server = { path = "../../lib/zawgl-server" }
zawgl-core = { path = "../../lib/zawgl-core" }
zawgl-client = { path = "../../client/zawgl-client" }
log = "0.4"
simple_logger = "2.1.0"
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }
bson = "2.0.1"