[package]
name = "cypher-tests"
version = "0.1.2"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2021"

[lib]
name = "cypher_tests"

[dependencies]
zawgl-server = { path = "../../lib/zawgl-server" }
zawgl-core = { path = "../../lib/zawgl-core" }
zawgl-client = { path = "../../client/zawgl-client" }
log = "0.4"
simple_logger = "4.1.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }
bson = "2.0.1"