[package]
name = "one-graph-cypher"
version = "0.1.0"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2018"

[lib]
name = "one_graph_cypher"

[dependencies]
one-graph-core = { path = "../one-graph-core" }
one-graph-tx-handler = { path = "../one-graph-tx-handler" }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0.105", features = ["derive"] }
bson = "2.0.1"