[package]
name = "one-graph-server"
version = "0.1.0"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2018"

[lib]
name = "one_graph_server"

[dependencies]
gremlin-client = "0.4.0"
one-graph-gremlin = { path = "../one-graph-gremlin" }
one-graph-db-engine = { path = "../one-graph-db-engine" }
tokio-tungstenite = "*"
tokio = { version = "0.3", features = ["full"] }
tungstenite = "*"
futures-util = "0.3.8"
log = "0.4"
simple_logger = "1.11.0"
serde_json = "1.0"