[package]
name = "one-graph-tx-handler"
version = "0.1.0"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2018"

[lib]
name = "one_graph_tx_handler"

[dependencies]
one-graph-core = { path = "../one-graph-core" }
log = "0.4"
simple_logger = "1.11.0"
serde_json = "1.0"
parking_lot = "0.5.1"