[package]
name = "zawgl-core"
version = "0.1.10"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2021"
description = "Zawgl Graph Core Library"
license = "MIT"

[lib]
name = "zawgl_core"

[dependencies]
log = "0.4.19"
toml = "0.8.12"
serde = { version = "1.0.177", features = ["derive"] }