[package]
name = "zawgl-core"
version = "0.1.15"
authors = ["Alexandre RICCIARDI <aricciardi501@gmail.com>"]
edition = "2021"
description = "Zawgl Graph Core Library"
license = "MIT"

[lib]
name = "zawgl_core"

[dependencies]
log = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }