[package]
name = "zawgl-cypher-query-model"
version = "0.1.1"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2021"

[lib]
name = "zawgl_cypher_query_model"

[dependencies]
zawgl-core = { path = "../zawgl-core" }
log = "0.4"
serde_json = "1.0"
parking_lot = "0.12.0"
bson = "2.0.1"