[package]
name = "zawgl-cypher-query-model"
version = "0.1.2"
authors = ["Alexandre RICCIARDI <aricciardi501@gmail.com>"]
edition = "2021"

[lib]
name = "zawgl_cypher_query_model"

[dependencies]
zawgl-core = { path = "../zawgl-core" }
log = { workspace = true }
parking_lot = "0.12.3"
serde_json = { workspace = true }