[package]
name = "zawgl-cypher-query-planner"
version = "0.1.0"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2018"

[lib]
name = "zawgl_cypher_query_planner"

[dependencies]
zawgl-core = { path = "../zawgl-core" }
zawgl-cypher-query-model = { path = "../zawgl-cypher-query-model" }
log = "0.4"