[package]
name = "zawgl-front"
version = "0.1.2"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2021"

[lib]
name = "zawgl_front"

[dependencies]
zawgl-core = { path = "../zawgl-core" }
zawgl-cypher-query-model = { path = "../zawgl-cypher-query-model" }
log = "0.4.19"
serde_json = "1.0.104"
serde = { version = "1.0.177", features = ["derive"] }
bson = "2.6.1"
parking_lot = "0.12.1"
tokio = { version = "1.29.1", features = ["full"] }
