[package]
name = "zawgl-front"
version = "0.1.2"
authors = ["Alexandre RICCIARDI <aricciardi501@gmail.com>"]
edition = "2021"

[lib]
name = "zawgl_front"

[dependencies]
zawgl-core = { path = "../zawgl-core" }
zawgl-cypher-query-model = { path = "../zawgl-cypher-query-model" }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
parking_lot = "0.12.3"
tokio = { workspace = true }
