[package]
name = "zawgl-server"
version = "0.1.1"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2021"

[lib]
name = "zawgl_server"

[dependencies]
gremlin-client = "0.8.0"
zawgl-front = { path = "../zawgl-front" }
zawgl-core = { path = "../zawgl-core" }
tokio-tungstenite = "0.19.0"
tokio = { version = "1.28.1", features = ["full"] }
futures-util = "^0.3"
log = "0.4"
simple_logger = "4.1.0"
serde_json = "1.0"
parking_lot = "0.12.0"
bson = "2.0.1"