[package]
name = "zawgl-server"
version = "0.1.2"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2021"

[lib]
name = "zawgl_server"

[dependencies]
gremlin-client = "0.8.4"
zawgl-front = { path = "../zawgl-front" }
zawgl-core = { path = "../zawgl-core" }
tokio-tungstenite = "0.21.0"
tokio = { version = "1.29.1", features = ["full"] }
futures-util = "0.3.28"
log = "0.4.19"
simple_logger = "5.0.0"
serde_json = "1.0.117"
parking_lot = "0.12.1"
bson = "2.6.1"