[package]
name = "zawgl-server"
version = "0.1.2"
authors = ["Alexandre RICCIARDI <aricciardi501@gmail.com>"]
edition = "2021"

[lib]
name = "zawgl_server"

[dependencies]
gremlin-client = "0.8.4"
zawgl-front = { path = "../zawgl-front" }
zawgl-core = { path = "../zawgl-core" }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3.28"
log = { workspace = true }
simple_logger = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12.1"