[package]
name = "zawgl-tx-handler"
version = "0.1.0"
authors = ["Alexandre RICCIARDI <alexandre.ricciardi@pm.me>"]
edition = "2018"

[lib]
name = "zawgl_tx_handler"

[dependencies]
zawgl-core = { path = "../zawgl-core" }
zawgl-query-planner = { path = "../zawgl-query-planner" }
log = "0.4"
serde_json = "1.0"
parking_lot = "0.12.0"